# catalysh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
docs/: command_flow.dot
src/: README.md  commands.rs  config.rs  handlers.rs  main.rs  update.rs  utils.rs
src/api/: auth.rs  devices.rs  mod.rs
src/api/authentication/: auth.rs
src/api/clients/: getclientdetail.rs  getclientenrichment.rs  mod.rs
src/api/devices/: devicedetailenrichment.rs  getdevicelist.rs  mod.rs
src/api/issues/: getissuelist.rs  mod.rs
src/api/wireless/: accesspointconfig.rs  mod.rs  rfprofile.rs  rfrpofile.rs
src/app/: auth_storage.rs  config.rs  mod.rs  update.rs  windows_setup.rs
src/commands/: mod.rs
src/commands/app/: config.rs  mod.rs  update.rs
src/commands/config/: mod.rs
src/commands/show/: ap.rs  client.rs  device.rs  issue.rs  mod.rs
src/handlers/: clear.rs  mod.rs
src/handlers/app/: config.rs  mod.rs  update.rs
src/handlers/config/: mod.rs  repl.rs
src/handlers/show/: ap.rs  client.rs  device.rs  issue.rs  mod.rs
src/helpers/: utils.rs
src/templates/: HowToUseThese.md  exampleintegration.rs  templates.rs
