[package]
name = "catsh"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/tparnell96/catsh"
homepage = "https://github.com/tparnell96/catsh"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/tparnell96/catsh"
keywords = ["networking", "cisco", "dnac", "catalyst", "cli"]
categories = ["command-line-utilities"]
exclude = ["/target"]
[dependencies]
clap-repl = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "cookies", "native-tls", "rustls-tls", "blocking"] }
serde_json = "1.0"
argon2 = "0.5.3"
rand = { version = "0.8.5", features = ["std"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.28.0", features = ["full"] }
rpassword = "7.0.0"
prettytable = "0.10.0"
chrono = "0.4.26"
anyhow = "1.0.93"
[[bin]]
name = "windows_installer"
path = "src/bin/windows_installer.rs"
