[package]
name = "catalysh"
version = "0.0.6"
edition = "2021"
description = "A command line utility for interaction with Ciscos Catalyst Center, utilizing it's API"
repository = "https://github.com/tparnell96/catalysh"
homepage = "https://github.com/tparnell96/catalysh"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/tparnell96/catalysh"
keywords = ["networking", "cisco", "dnac", "catalyst", "cli"]
categories = ["command-line-utilities"]
exclude = ["/target", "/Cargo.lock", "/.github/workflows/rust.yml"]

[dependencies]
aes-gcm = "0.10.3"
clap-repl = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "cookies", "native-tls", "rustls-tls", "blocking"] }
serde_json = "1.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
rand = { version = "0.8.5", features = ["std"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.28.0", features = ["full"] }
prettytable = "0.10.0"
rpassword = "7.0.0"
sysinfo = "0.29.10"
chrono = "0.4.26"
anyhow = "1.0.93"
